[package]
name = "midnight-tx-bug"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
midnight-ledger = { git = "https://github.com/midnightntwrk/midnight-ledger-prototype", package = "midnight-ledger", tag = "ledger-4.0.0" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
